# speed-cli

./: .gitignore  LICENSE  README.md  TODO  example.py  main.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
speed/: pyproject.toml
speed/speed/: __init__.py  core.py
speed/speed/utils/: _types.py  checkers.py  colors.py  logging_config.py  utils.py
speed/tests/: test_core.py  test_types.py  test_utils.py
