[tool.poetry]
name = "speed"
version = "0.1.0"
description = ""
authors = ["Anthony Rafidison <benjaraf006@gmail.com>"]
license = "MIT"
# readme = "README.md"
repository = "https://github.com/anthonyraf/speed-cli"

[tool.poetry.dependencies]
python = "^3.10"
wind-parser = {git = "https://github.com/anthonyraf/wind-parser.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coloredlogs = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
